# wasm-ui

./: CRITIQUE.md  Cargo.toml
.github/workflows/: bench.yml  browser-tests.yml  ci.yml  test-cdp-app-load.yml  test-cdp-checkout.yml  test-cdp-dynamic-form.yml  test-cdp-notifications.yml  test-cdp-runner.yml  test-cdp-sign-in.yml  test-cdp-submit-flow.yml
crates/cdp-runner/: Cargo.toml
crates/cdp-runner/src/: lib.rs  pixel_diff.rs
crates/ui-core/: Cargo.toml
crates/ui-core/src/: app.rs  batch.rs  bidi.rs  form.rs  icon.rs  input.rs  lib.rs  metrics.rs  rest.rs  text_measure.rs  theme.rs  ui.rs
crates/ui-core/tests/: optimistic.rs  validation.rs
crates/ui-wasm/: Cargo.toml
crates/ui-wasm/src/: atlas.rs  demo.rs  http.rs  icon_atlas.rs  lib.rs  renderer.rs  runtime.rs
crates/wham-elements/src/: lib.rs
crates/wham-test/: Cargo.toml
crates/wham-test/src/: lib.rs
crates/wham-test/tests/: notification_settings.rs
docs/: getting-started.md  prior-art.md  testing.md
examples/web/: app.js  index.html  manifest.json  sw.js
