[package]
name = "ui-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ui-core = { path = "../ui-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
  "Window",
] }
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
fontdue = "0.8"
unicode-segmentation = "1.11"
unicode-bidi = "0.3"
thiserror = "1.0"
console_error_panic_hook = "0.1"
